[project]
name = "ai-learn-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Станислав Рубцов",email = "frexrub@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "openai (>=1.102.0,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-openai (>=0.3.35,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

